@@ -11,3 +11,9 @@ Project Properties
 ![Open Project Properties](https://github.com/tnsr1/JavaFxHello1/blob/main/images/ProjectProperties.png)
 ![Add Project Libraries](https://github.com/tnsr1/JavaFxHello1/blob/main/images/ProjectLibraries.png)
 ![Add VM Options](https://github.com/tnsr1/JavaFxHello1/blob/main/images/RunLibraries.png)
+
+<br><br>
+VM Options:
+<br><br>
+--module-path "c:\javafx\javafx-sdk-23.0.1\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics
+<br><br>
